[project]
name = "madblog"
description = "A general-purpose framework for automation"
dynamic = ["version", "dependencies", "optional-dependencies", "entry-points", "license"]
authors = [
  {name = "Fabio Manganiello", email = "fabio@manganiello.tech"},
]

classifiers=[
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]

readme = "README.md"
requires-python = '>= 3.8'
keywords = ["blog", "markdown"]

[tool.setuptools.dynamic]
version = {attr = "madblog.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["madblog", "madblog.*"]

[project.scripts]
madblog = 'madblog.cli:run'

[tool.bumpversion]
current_version = "0.4.8"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "madblog/__init__.py"

[[tool.bumpversion.files]]
filename = "setup.py"
